# meetingsdk-headless-linux-sample

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE.md  README.md  compose.yaml  index.js  package-lock.json  package.json  sample.config.ini  sample.config.toml  vcpkg.json
client/: .env.sample  .gitignore  app.js  config.js  index.js  package-lock.json  package.json  rollup.config.js
client/public/js/: index.js
client/public/js/lib/: socket.js
client/server/: consumer.js  server.js  socket.js  transcribe.js
client/server/views/: index.pug
src/: Config.cpp  Config.h  Zoom.cpp  Zoom.h  main.cpp
src/events/: AuthServiceEvent.cpp  AuthServiceEvent.h  MeetingRecordingCtrlEvent.cpp  MeetingRecordingCtrlEvent.h  MeetingReminderEvent.cpp  MeetingReminderEvent.h  MeetingServiceEvent.cpp  MeetingServiceEvent.h
src/raw-record/: ZoomSDKAudioRawDataDelegate.cpp  ZoomSDKAudioRawDataDelegate.h  ZoomSDKRendererDelegate.cpp  ZoomSDKRendererDelegate.h
src/raw_record/: ZoomSDKAudioRawDataDelegate.cpp  ZoomSDKAudioRawDataDelegate.h  ZoomSDKRendererDelegate.cpp  ZoomSDKRendererDelegate.h
src/raw_send/: ZoomSDKVideoSource.cpp  ZoomSDKVideoSource.h
src/util/: Log.h  Singleton.h  SocketServer.cpp  SocketServer.h  Unicode.h  websocket.cpp  websocket.h
